# Kachow

./: main.py  pyproject.toml  requirements.txt  settings.py
app/: __init__.py  extensions.py
app/api/: __init__.py  user_resources.py
app/templates/: base.html
app/templates/pages/: index.html
app/templates/shared/: _head.html
app/views/: __init__.py  basics.py
