[tool.poetry]
name = "rascal"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask-RESTful = "^0.3.9"
Flask-JWT-Extended = "^4.3.1"
Flask-Mail = "^0.9.1"
Flask-Moment = "^1.0.2"
Flask-WTF = "^0.15.1"
slugify = "^0.0.1"
api = "^0.0.7"
Flask-CKEditor = "^0.4.6"
gevent = "^21.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
